[package]
name = "info_utils"
version = "1.0.0"
edition = "2021"
authors = ["secondary-smiles <shavkinder@lightblog.dev>"]
description = "Utilities for displaying Options, Results, and logging in a pleasant manner"
readme = "README.md"
license = "MIt"
license-file = "LICENSE.txt"
keywords = ["macro", "log", "logging", "error", "unwrap"]
categories = ["command-line-interface", "development-tools::debugging", "rust-patterns"]

[dependencies]
