[package]
name = "info_utils"
version = "1.3.1"
edition = "2021"
authors = ["secondary-smiles <shavkinder@lightblog.dev>"]
repository = "https://github.com/secondary-smiles/info_utils"
description = "Utilities for displaying Options, Results, and logging in a pleasant manner"
readme = "README.md"
license = "MIT"
keywords = ["macro", "log", "logging", "error", "unwrap"]
categories = ["command-line-interface", "development-tools::debugging", "rust-patterns"]

[dependencies]
