[package]
name = "info_utils"
version = "2.2.2"
edition = "2021"
authors = ["Shav Kinderlehrer <shav@trinket.icu>"]
repository = "https://github.com/secondary-smiles/info_utils"
description = "Utilities for displaying Options, Results, and logging in a pleasant manner"
readme = "README.md"
license = "MIT"
keywords = ["macro", "log", "logging", "error", "unwrap"]
categories = ["command-line-interface", "development-tools::debugging", "rust-patterns"]

[dependencies]
